@@ -3,6 +3,9 @@
 	* tramp.el (tramp-dissect-file-name): Set hop to nil if NODEFAULT.
 	(Bug#63578)
 
+	* tramp-fuse.el (tramp-fuse-mount-point, tramp-fuse-mounted-p):
+	Support existing mount points.
+
 2023-05-20  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-compat.el (ansi-color): Require.
